--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
             <li><a href="https://discordapp.com/users/679768126384373847" target="_blank">Discord</a></li>
         </ul>
     </div>
-    <div class="cpyrght">© 2023 Benii1</div>
+    <div class="cpyrght">© 2023 Benii1  -   Feel free to contact me.</div>
 </body>
 </html>
