--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benii1</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images\favicon.png">
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="text">
-        <h1 class="">Benii1</h1>
+            <h1 class="">Benii1</h1>
         <ul class="nav">
             <li><a href="https://steamcommunity.com/id/benii1_/" target="_blank">Steam</a></li>
             <li><a href="https://www.instagram.com/szlonkai_benedek/" target="_blank">Instagram</a></li>
@@ -19,6 +20,6 @@
             <li><a href="https://discordapp.com/users/679768126384373847" target="_blank">Discord</a></li>
         </ul>
     </div>
-    <div class="cpyrght">© 2023 Benii1  -   Feel free to contact me.</div>
+    <div class="cpyrght">© 2023 Benii1</div>
 </body>
 </html>
