--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="text">
-            <h1 class="">Benii1</h1>
+            <h1 class="" id="noselect">Benii1</h1>
         <ul class="nav">
             <li><a href="https://steamcommunity.com/id/benii1_/" target="_blank">Steam</a></li>
             <li><a href="https://www.instagram.com/szlonkai_benedek/" target="_blank">Instagram</a></li>
@@ -20,6 +20,6 @@
             <li><a href="https://discordapp.com/users/679768126384373847" target="_blank">Discord</a></li>
         </ul>
     </div>
-    <div class="cpyrght">© 2023 Benii1</div>
+    <div class="cpyrght" id="noselect">© 2023 Benii1</div>
 </body>
 </html>
