--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="text">
             <h1 class="" id="noselect">Benii1</h1>
-        <ul class="nav">
+        <ul class="nav" id="noselect">
             <li><a href="https://steamcommunity.com/id/benii1_/" target="_blank">Steam</a></li>
             <li><a href="https://www.instagram.com/szlonkai_benedek/" target="_blank">Instagram</a></li>
             <li><a href="https://twitter.com/Benii1Sz" target="_blank">Twitter</a></li>
