--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <ul class="nav" id="noselect">
             <li><a href="https://steamcommunity.com/id/benii1_/" target="_blank">Steam</a></li>
             <li><a href="https://www.instagram.com/szlonkai_benedek/" target="_blank">Instagram</a></li>
-            <li><a href="https://twitter.com/Benii1Sz" target="_blank">Twitter</a></li>
+            <li><a href="https://twitter.com/szBenii1" target="_blank">Twitter</a></li>
             <li><a href="https://github.com/Bbenii1" target="_blank">GitHub</a></li>
             <li><a href="https://discordapp.com/users/679768126384373847" target="_blank">Discord</a></li>
         </ul>
+        <a href="https://github.com/Bbenii1/Temperature-converter-in-python-with-GUI/" target="_blank" class="new"><span class="bold">NEW!</span> Temperature converter in python with GUI</a>
     </div>
     <div class="cpyrght">© 2023 Benii1</div>
 
