--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="blur"></div>
     <div class="text">
         <h2>Hey, i'm</h2>
-        <h1 data-value="BENII1">BENII1</h1>
+        <h1 data-value="BENII1">BENI</h1>
 
         <ul class="nav" id="noselect">
             
