--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!-- <div id="blob"></div> -->
-<div id="blur"></div>
+<!-- <div id="blur"></div> -->
     <div class="text">
         <h2>Hey, i'm</h2>
         <h1 data-value="BENII1">Beni</h1>
