--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Benii1</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="images\favicon.png">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel="stylesheet">
 </head>
 <body>
 <!-- <div id="blob"></div> -->
@@ -19,18 +20,22 @@
             <li><a href="https://github.com/Bbenii1" target="_blank">GitHub</a></li>
             <li><a href="https://discordapp.com/users/679768126384373847" target="_blank">Discord</a></li>
         </ul>
+        <hr>
+        <div id="aboutme">
+            <h3>About Me</h3>
+            <p id="aboutmetext">Hi there! I’m a 17-year-old high school student who has a passion for programming. My curiosity drives me to explore new technologies and learn from every line of code I write.  </p>
+            <h3>My Current Skills</h3>
+            <div class="knowledge">
+                <ul style="padding-left: 0; display: block; margin: auto;">
+                    <li class="skill"><i class='bx bxl-html5'></i>HTML</li>
+                    <li class="skill"><i class='bx bxl-php' ></i>PHP</li>
+                    <li class="skill"><i class='bx bxs-file-css' ></i>CSS</li>
+                    <li class="skill"><i class='bx bxl-javascript' ></i>JavaScript</li>
+                    <li class="skill"><i class='bx bxl-python' ></i>Python</li>
+                </ul>
+            </div>
+        </div>
     </div>
-
-<script>
-// const blob = document.getElementById("blob");
-// window.onpointermove = event => { 
-// const { clientX, clientY } = event;
-//   blob.animate({
-//     left: `${clientX}px`,
-//     top: `${clientY}px`
-//   }, { duration: 3000, fill: "forwards" });
-// }
-
-</script>
+    
 </body>
 </html>
