--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="aboutme">
             <h3>About Me</h3>
             <p id="aboutmetext">Hi there! I’m a 17-year-old high school student who has a passion for programming. My curiosity drives me to explore new technologies and learn from every line of code I write.  </p>
-            <h3>My Current Skills</h3>
+            <h3 style="margin-top: 10vh;">My Current Skills</h3>
             <div class="knowledge">
                 <ul style="padding-left: 0; display: block; margin: auto;">
                     <li class="skill"><i class='bx bxl-html5'></i>HTML</li>
