new font, design updates

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="images\favicon.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anta&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-<!-- <div id="blob"></div> -->
-<!-- <div id="blur"></div> -->
+
     <div class="text">
         <h2>Hey, i'm</h2>
         <h1 data-value="BENII1">Beni</h1>
@@ -23,7 +26,7 @@
         <hr>
         <div id="aboutme">
             <h3>About Me</h3>
-            <p id="aboutmetext">Hi there! I’m a 17-year-old high school student who has a passion for programming. My curiosity drives me to explore new technologies and learn from every line of code I write.</p>
+            <p id="aboutmetext">Hi there! I'm a 17-year-old high school student with a fervent passion for programming and 3D printing. I'm always curious and love diving into new tech stuff and learn all I can from every line of code I write.</p>
             <h3 style="margin-top: 10vh;">My Current Skills</h3>
             <div class="knowledge">
                 <ul style="padding-left: 0; display: block; margin: auto;">
