--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <hr>
         <div id="aboutme">
             <h3>About Me</h3>
-            <p id="aboutmetext">Hi there! I'm a 17-year-old high school student with a fervent passion for programming and 3D printing. I'm always curious and love diving into new tech stuff and learn all I can from every line of code I write.</p>
+            <p id="aboutmetext">Hi there! I'm a 17-year-old high school student with a fervent passion for programming, photography and 3D printing. I'm always curious and love diving into new tech stuff and learn all I can from every line of code I write.</p>
             <h3 style="margin-top: 10vh;">My Current Skills</h3>
             <div class="knowledge">
                 <ul style="padding-left: 0; display: block; margin: auto;">
