added fancy effect on links :3

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="images\favicon.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel="stylesheet">
+    <script src="script.js" type="text/javascript"></script> 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,11 +18,11 @@
 
     <div class="text">
         <h2>Hey, i'm</h2>
-        <h1 data-value="BENII1">Beni</h1>
+        <h1>Beni</h1>
         <ul class="nav" id="noselect">
-            <li><a href="https://www.instagram.com/szlonkai_benedek/" target="_blank">Instagram</a></li>
-            <li><a href="https://github.com/Bbenii1" target="_blank">GitHub</a></li>
-            <li><a href="https://discordapp.com/users/679768126384373847" target="_blank">Discord</a></li>
+            <li><a href="https://www.instagram.com/szlonkai_benedek/" target="_blank" class="fancy" id="inst_blast">Instagram</a></li>
+            <li><a href="https://github.com/Bbenii1" target="_blank" class="fancy" id="git_blast">GitHub</a></li>
+            <li><a href="https://discordapp.com/users/679768126384373847" target="_blank" class="fancy" id="dis_blast">Discord</a></li>
         </ul>
         <hr>
         <div id="aboutme">
@@ -30,11 +31,11 @@
             <h3 style="margin-top: 10vh;">My Current Skills</h3>
             <div class="knowledge">
                 <ul style="padding-left: 0; display: block; margin: auto;">
-                    <li class="skill"><i class='bx bxl-html5'></i>HTML</li>
-                    <li class="skill"><i class='bx bxl-php' ></i>PHP</li>
-                    <li class="skill"><i class='bx bxs-file-css' ></i>CSS</li>
-                    <li class="skill"><i class='bx bxl-javascript' ></i>JavaScript</li>
-                    <li class="skill"><i class='bx bxl-python' ></i>Python</li>
+                    <li class="skill effect"><i class='bx bxl-html5'></i>HTML</li>
+                    <li class="skill effect"><i class='bx bxl-php' ></i>PHP</li>
+                    <li class="skill effect"><i class='bx bxs-file-css' ></i>CSS</li>
+                    <li class="skill effect"><i class='bx bxl-javascript' ></i>JavaScript</li>
+                    <li class="skill effect"><i class='bx bxl-python' ></i>Python</li>
                 </ul>
             </div>
         </div>
