--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anta&family=Kaushan+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anta&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
-<body onload="init()">
+<body onload="init()" class="" id="body">
+    <button onclick="change()" value="1" class=""><i class='bx bxs-moon'></i></button>
     <div class="text">
-        <h2>Hey, i'm</h2>
+        <h2 class="">Hey, I'm</h2>
         <h1>Beni</h1>
         <ul class="nav" id="noselect">
             <li><a href="https://www.instagram.com/szlonkai_benedek/" target="_blank" class="fancy" id="inst_blast">Instagram</a></li>
@@ -26,8 +31,9 @@
         <hr>
         <div id="aboutme">
             <h3>About Me</h3>
-            <p id="aboutmetext">Hi there! I'm a 17-year-old high school student with a fervent passion for programming, photography and 3D printing. I'm always curious and love diving into new tech stuff and learn all I can from every line of code I write.</p>
-            <h3 style="margin-top: 10vh;">My Current Skills</h3>
+            <p id="aboutmetext">Hi there! I'm a 17-year-old high school student living in Hungary. Currently I'm learning computer science and has a fervent passion for programming, photography, and 3D printing. I'm always eager to learn and explore new concepts, and I strive to apply my skills and knowledge to create innovative and impactful projects. </p>
+            <!-- I'm excited to share my work with you and look forward to collaborating on future endeavors. -->
+            <h3>My Current Skills</h3>
             <div class="knowledge">
                 <ul style="padding-left: 0; display: block; margin: auto;">
                     <li class="skill effect"><i class='bx bxl-html5'></i>HTML</li>
