--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anta&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body onload="init()" class="" id="body">
-    <button onclick="change()" value="1" class=""><i class='bx bxs-moon'></i></button>
+    <button onclick="change()" value="1" class=""><i style="width: 16px; height: 16px;" class='bx bxs-moon'></i></button>
     <div class="text">
         <h2 class="">Hey, I'm</h2>
         <h1>Beni</h1>
