Revert "big animation and style update"
This reverts commit f54dac265c1850329aa16fc4e7e4c63229214e0c.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body onload="init()" class="" id="body">
     <button onclick="change()" value="1" class=""><img style="filter: invert(); transition: .5s" src="images/moon-solid-24.png" alt=""></button>
     <div class="text">
-        <h2 class="">Hey, I'm</h2>
+        <h2>Hey, i'm</h2>
         <h1>Beni</h1>
         <ul class="nav" id="noselect">
             <li><a href="https://www.instagram.com/szlonkai_benedek/" target="_blank" class="fancy" id="inst_blast">Instagram</a></li>
@@ -31,9 +31,8 @@
         <hr>
         <div id="aboutme">
             <h3>About Me</h3>
-            <p id="aboutmetext">Hi there! I'm a 17-year-old high school student living in Hungary. Currently I'm learning computer science and has a fervent passion for programming, photography, and 3D printing. I'm always eager to learn and explore new concepts, and I strive to apply my skills and knowledge to create innovative and impactful projects. </p>
-            <!-- I'm excited to share my work with you and look forward to collaborating on future endeavors. -->
-            <h3>My Current Skills</h3>
+            <p id="aboutmetext">Hi there! I'm a 17-year-old high school student with a fervent passion for programming, photography and 3D printing. I'm always curious and love diving into new tech stuff and learn all I can from every line of code I write.</p>
+            <h3 style="margin-top: 10vh;">My Current Skills</h3>
             <div class="knowledge">
                 <ul style="padding-left: 0; display: block; margin: auto;">
                     <li class="skill effect"><i class='bx bxl-html5'></i>HTML</li>
