--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <hr>
         <div id="aboutme">
             <h3>About Me</h3>
-            <p id="aboutmetext">Hi there! I'm a 17-year-old high school student living in Hungary. Currently I'm learning computer science and has a fervent passion for programming, photography, and 3D printing. I'm always eager to learn and explore new concepts, and I strive to apply my skills and knowledge to create innovative and impactful projects. </p>
+            <p id="aboutmetext">Hi there! I'm a 17-year-old high school student living in Hungary. Currently I'm learning computer science and have a fervent passion for programming, photography, and 3D printing. I'm always eager to learn and explore new concepts, and I strive to apply my skills and knowledge to create innovative and impactful projects. </p>
             <!-- I'm excited to share my work with you and look forward to collaborating on future endeavors. -->
             <h3>My Current Skills</h3>
             <div class="knowledge">
