minor style update

--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
         <hr>
         <div id="aboutme">
             <h3>About Me</h3>
-            <p id="aboutmetext">Hi there! I'm a 17-year-old high school student living in Hungary. Currently I'm learning computer science and have a fervent passion for programming, photography, and 3D printing. I'm always eager to learn and explore new concepts, and I strive to apply my skills and knowledge to create innovative and impactful projects. </p>
-            <!-- I'm excited to share my work with you and look forward to collaborating on future endeavors. -->
+            <p id="aboutmetext" style=" display: block">Hi there! I'm a 17-year-old high school student living in Hungary. Currently I'm learning computer science and have a fervent passion for programming, photography, and 3D printing. I'm always eager to learn and explore new concepts, and I strive to apply my skills and knowledge to create innovative and impactful projects. </p>
             <h3>My Current Skills</h3>
             <div class="knowledge">
-                <ul style="padding-left: 0; display: block; margin: auto;">
-                    <li class="skill effect"><i class='bx bxl-html5'></i>HTML</li>
-                    <li class="skill effect"><i class='bx bxl-php' ></i>PHP</li>
-                    <li class="skill effect"><i class='bx bxs-file-css' ></i>CSS</li>
-                    <li class="skill effect"><i class='bx bxl-javascript' ></i>JavaScript</li>
-                    <li class="skill effect"><i class='bx bxl-python' ></i>Python</li>
-                </ul>
+                <ul style="padding-left: 0; margin: auto; vertical-align: middle; position: relative;">
+                    <li class="skill"><i class='bx bxl-html5'></i>HTML</li>
+                    <li class="skill"><i class='bx bxs-file-css' ></i>CSS</li>
+                    <li class="skill"><i class='bx bxl-php' ></i>PHP</li>
+                    <li class="skill"><i class='bx bxl-python' ></i>Python</li>
+                    <li class="skill"><i class='bx bxl-javascript' ></i>JavaScript</li>
+                    
+                </>
             </div>
         </div>
     </div>
-    <!-- <div id="bg"></div> -->
+    <div id="bg"></div>
 </body>
 </html>
